--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,13 +4,13 @@
 
 {% block main %}
 <main class="catalog-content catalog">
-  <h1 class="catalog__title">Каталог продукции</h1>
-  <div class="catalog__container">
+  <div class="page__centerer">
+    <h1 class="catalog-content__title">Каталог продукции</h1>
     <ul class="catalog__list">
       <li class="catalog__item">
         <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-chicken-small.png" alt="Cat Energy Pro chicken 500 gramm." width="68" height="86">
             </a>
           </div>
@@ -18,22 +18,22 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--small">Cat Energy PRO 500 г</h2>
             </a>
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">500 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Гречка</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">400 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">500 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Гречка</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">400 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog__item">
         <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-chicken-big.png" alt="Cat Energy Pro chicken 1000 gramm." width="84" height="101">
             </a>
           </div>
@@ -41,22 +41,23 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--big">Cat Energy PRO 1000 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">1000 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Курица</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">1000 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">1000 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Курица</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">1000 Р.</dd>
-          </dl>
-          <a href="" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog__item">
         <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-fish-small.png" alt="Cat Energy Pro fish 500 gramm." width="68" height="78">
             </a>
           </div>
@@ -64,22 +65,23 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--small">Cat Energy PRO 500 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">500 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Рыба</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">700 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">500 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Рыба</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">700 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog__item">
-        <div class="catalog-container">
+        <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-fish-big.png" alt="Cat Energy Pro fish 1000 gramm." width="84" height="101">
             </a>
           </div>
@@ -87,22 +89,23 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--big">Cat Energy PRO 500 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">1000 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Рыба</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">1000 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">1000 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Рыба</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">1000 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog__item">
-        <div class="catalog-container">
+        <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-buckweat-small.png" alt="Cat Energy Pro buckweat 500 gramm." width="68" height="78">
             </a>
           </div>
@@ -110,22 +113,23 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--small">Cat Energy SLIM 500 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">500 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Гречка</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">400 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">500 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Гречка</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">400 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
-      <li class="catalog catalog__item">
+      <li class="catalog__item">
         <div class="catalog__container">
           <div class="catalog__product-photo">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-buckweat-big.png" alt="Cat Energy Pro buckweat 1000 gramm." width="84" height="101">
             </a>
           </div>
@@ -133,45 +137,47 @@
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--big">Cat Energy SLIM 1000 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">1000 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Гречка</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">700 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">1000 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Гречка</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">700 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog__item">
         <div class="catalog__container">
-          <div class="catalog__photo">
+          <div class="catalog__product-photo">
             <a href="" class="catalog__link">
               <img class="catalog__image" src="img/products/mobile-rice-small.png" alt="Cat Energy Pro rice 500 gramm." width="72" height="84">
             </a>
           </div>
-          <div class="catalog__info">
+          <div class="catalog__product-info">
             <a href="#" class="catalog__link">
               <h2 class="catalog__title catalog__title--small">Cat Energy SLIM 500 г</h2>
             </a>
+
+            <dl class="catalog__stats stats">
+              <dt class="stats__info">Масса</dt>
+              <dd class="stats__value">500 г</dd>
+              <dt class="stats__info">Вкус</dt>
+              <dd class="stats__value">Рис</dd>
+              <dt class="stats__info">Цена</dt>
+              <dd class="stats__value">500 Р.</dd>
+            </dl>
           </div>
-          <dl class="catalog__stats stats">
-            <dt class="stats__info">Масса</dt>
-            <dd class="stats__value">500 г</dd>
-            <dt class="stats__info">Вкус</dt>
-            <dd class="stats__value">Рис</dd>
-            <dt class="stats__info">Цена</dt>
-            <dd class="stats__value">500 Р.</dd>
-          </dl>
-          <a href="#" class="catalog-button">Заказать</a>
         </div>
+        <a href="#" class="catalog-button">Заказать</a>
       </li>
       <li class="catalog catalog__item">
         <div class="catalog__container catalog__container--last">
           <div class="catalog__icon catalog__icon--plus">
-            <a href="" class="catalog__link">
+            <a href="#" class="catalog__link">
             </a>
           </div>
           <div class="catalog__info">
@@ -181,14 +187,14 @@
             <p class="catalog__subtitle catalog__subtitle--last">На самом деле вкусов гораздо
               больше!</p>
           </div>
-          <a href="#" class="catalog-button --secondary-color">Показать все</a>
         </div>
+        <a href="#" class="catalog-button --secondary-color">Показать все</a>
       </li>
     </ul>
   </div>
   <section class="goods">
-    <h2 class="goods__title">Дополнительные товары</h2>
-    <div class="goods__container">
+    <div class="page__centerer">
+      <h2 class="goods__title">Дополнительные товары</h2>
       <ul class="goods__list">
         <li class="goods__item more-goods">
           <div class="more-goods__container">
@@ -219,22 +225,23 @@
             <h3 class="more-goods__title">Витамины</h3>
             <p class="more-goods__info">1 упаковка (30 г)</p>
             <p class="more-goods__value">300 Р.</p>
-            <a href="" class="goods-button button">Заказать</a>
+            <a href="#" class="goods-button button">Заказать</a>
+          </div>
+        </li>
+        <li class="goods__item promotions">
+          <div class="promotions">
+            <div class="promotions__container">
+              <h2 class="visually-hidden">Наши акции</h2>
+              <div class="promotions__icon"></div>
+              <p class="promotions__text">Закажите все и получите чехол для кота в подарок!</p>
+            </div>
           </div>
         </li>
       </ul>
-      <aside class="goods-promotions">
-        <div class="promotions__container">
-          <h2 class="visually-hidden">Наши акции</h2>
-          <div class="promotions__icon-present"></div>
-          <p class="promotions__text">Закажите все и получите чехол для кота в подарок!</p>
-        </div>
-      </aside>
-
     </div>
   </section>
-  <section class="contacts">
-    <div class="page__centerer">
+  <section class="contacts contact--theme page__centerer">
+    <div class="contacts__wrapper">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
         <p class="contacts__advertisement">
@@ -246,7 +253,7 @@
       </address>
     </div>
     <div class="contacts__location">
-      <img class="contacts__map" src="#" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" />
+      <img class="contacts__map" src="img/location.png" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="362" />
     </div>
   </section>
 </main>
