--- a/source/form.html
+++ b/source/form.html
@@ -10,39 +10,40 @@
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
   </div>
-  <div class="profile-form">
+  <section class="profile-form">
+    <h2 class="visually-hidden">Форма Заявок</h2>
     <form class="profile-form" action="https://echo.htmlacademy.ru">
       <div class="page__centerer">
         <fieldset class="profile-form__group form__legend">
           <legend class="visually-hidden">Информация о питомце</legend>
           <label for="name" class="profile-form__label">Имя:<sup>*</sup>
             <input class="profile-form__input profile-form__input--name" type="text" id="name" placeholder="Барсик" required>
-          </label>
+          </label></br>
           <label class="profile-form__label" for="weight">Вес (кг):<sup>*</sup>
             <input class="profile-form__input profile-form__input--weight" type="number" id="weight" placeholder="7" required>
           </label>
           <label class="profile-form__label" for="age">Возраст (лет):
-            <input class="profile-form__input" type="number" id="age" placeholder="7">
+            <input class="profile-form__input profile-form__input--age" type="number" id="age" placeholder="7">
           </label>
         </fieldset>
         <fieldset class="profile-form__filter-radio form__legend">
           <legend class="visually-hidden">Нужды питомца</legend>
-          <label class="profile-form__label" for="weight-loss">Похудение
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>
+          <label class="profile-form__label" for="weight-loss">
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
           </label>
-          <label class="profile-form__label" for="weight-gain">Набор Массы
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-gain">
+          <label class="profile-form__label" for="weight-gain">
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
           </label>
-          <label class="profile-form__label" for="doubts">Не знаю (Нужен ваш совет)
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="doubts">
+          <label class="profile-form__label" for="doubts">
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
           </label>
         </fieldset>
         <fieldset class="profile-form__contacts form__legend">
-          <legend class="profile-form__legend profile-form__legend-contacts">Контактные данные (владельца кота)</legend>
+          <legend class="profile-form__legend profile-form__legend--contacts">Контактные данные (владельца кота)</legend>
           <label class="profile-form__label" for="email">E-mail:<sup>*</sup>
             <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
             <span class="profile-form__icon-tel"></span>
-          </label>
+          </label><br>
           <label class="profile-form__label" for="phone">Телефон:<sup>*</sup>
             <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
             <span class="profile-form__icon-tel"></span>
@@ -54,17 +55,17 @@
         </fieldset>
         <fieldset class="profile-form__add-ons form__legend">
           <legend class="profile-form__legend profile-form__legend-addons">Дополнительно</legend>
-          <label class="profile-form__label" for="sugar-sub">сахарозаменитель
-            <input class="profile-form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>
+          <label class="profile-form__label" for="sugar-sub">
+            <input class="profile-form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>сахарозаменитель
           </label>
-          <label class="profile-form__label" for="water">питьевая вода
-            <input class="profile-form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">
+          <label class="profile-form__label" for="water">
+            <input class="profile-form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">питьевая вода
           </label>
-          <label class="profile-form__label" for="milk">молоко
-            <input class="profile-form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">
+          <label class="profile-form__label" for="milk">
+            <input class="profile-form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">молоко
           </label>
-          <label class="profile-form__label" for="vitamins">витамины
-            <input class="profile-form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">
+          <label class="profile-form__label" for="vitamins">
+            <input class="profile-form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">витамины
           </label>
           <div class="button-container">
             <button class="profile-form__button button" type="button">отправить заявку</button>
@@ -73,9 +74,9 @@
         </fieldset>
       </div>
     </form>
-  </div>
-  <section class="contacts">
-    <div class="page__centerer">
+  </section>
+  <section class="contacts contacts--theme page__centerer">
+    <div class="contacts__wrapper">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
         <p class="contacts__advertisement">
@@ -87,7 +88,7 @@
       </address>
     </div>
     <div class="contacts__location">
-      <img class="contacts__map" src="#" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" />
+      <img class="contacts__map" src="img/location.png" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="362" />
     </div>
   </section>
 </main>
