--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-content">
+<main class="main-content page__centerer">
   <div class="main-content__banner">
     <h1 class="main-content__title">Функциональное питание для котов</h1>
     <p class="main-content__slogan">Занялся собой? Займись котом!</p>
@@ -112,7 +112,7 @@
       </div>
     </div>
   </section>
-  <section class="contacts">
+  <section class="contacts page__centerer">
     <div class="contacts__wrapper">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
