--- a/source/index.html
+++ b/source/index.html
@@ -19,23 +19,27 @@
       <h2 class="visually-hidden">Доступные программы</h2>
       <ul class="programs__list">
         <li class="programs__item">
-          <h3 class="programs__title programs__title--slim">Похудение</h3>
-          <p class="programs__description">
-            Ваш кот весит больше собаки и почти утратил способность лазить
-            по деревьям? Пора на диету! Cat Energy Slim поможет вашему
-            питомцу сбросить лишний вес.
-          </p>
-          <a href="#" class="programs__link programs__link--arrow">Каталог Slim</a>
+          <div class="programs__item-wrapper programs__item-wrapper--slim">
+            <h3 class="programs__title programs__title">Похудение</h3>
+            <p class="programs__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить
+              по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+              питомцу сбросить лишний вес.
+            </p>
+            <a href="#" class="programs__link programs__link--arrow">Каталог Slim</a>
+          </div>
         </li>
         <li class="programs__item">
-          <h3 class="programs__title programs__title--weight-gain">
-            Набор Массы
-          </h3>
-          <p class="programs__description">
-            Заработать авторитет среди дворовых котов и даже собак? Серия
-            Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <a href="#" class="programs__link programs__link--arrow">Каталог Pro</a>
+          <div class="programs__item-wrapper programs__item-wrapper--weight-gain">
+            <h3 class="programs__title programs__title">
+              Набор Массы
+            </h3>
+            <p class="programs__description">
+              Заработать авторитет среди дворовых котов и даже собак? Серия
+              Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a href="#" class="programs__link programs__link--arrow">Каталог Pro</a>
+          </div>
         </li>
       </ul>
     </div>
@@ -44,25 +48,25 @@
     <div class="page__centerer">
       <h2 class="principles__title">Как это работает</h2>
       <ul class="principles__list">
-        <li class="principles__item principles__item--icon_leaf">
+        <li class="principles__item principles__item--greens">
 
           Функциональное питание содержит только полезные питательные
           вещества.
 
         </li>
-        <li class="principles__item principles__item--icon_glass">
+        <li class="principles__item principles__item--solutable">
 
           Выпускается в виде порошка, который нужно лишь залить кипятком и
           готово.
 
         </li>
-        <li class="principles__item principles__item--icon_eat">
+        <li class="principles__item principles__item--silverwear">
 
           Замените один-два приема обычной еды на наше функциональное
           питание.
 
         </li>
-        <li class="principles__item principles__item--icon_alarm">
+        <li class="principles__item principles__item--clock">
 
           Уже через месяц наслаждайтесь изменениями к лучшему вашего
           питомца!
