--- a/source/form.html
+++ b/source/form.html
@@ -10,71 +10,83 @@
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
   </div>
-  <section class="form-profile page__centerer">
+  <section class="form-profile">
     <h2 class="visually-hidden">Форма Заявок</h2>
     <form class="form page__centerer" action="https://echo.htmlacademy.ru">
-      <div class="form__group-wrapper">
-        <fieldset class="form__group form__legend">
-          <legend class="visually-hidden">Информация о питомце</legend>
-          <label for="name" class="form__label form__label--sb">Имя:<sup>*</sup>
-            <input class="form__input form__input--name" type="text" id="name" placeholder="Барсик" required>
-          </label>
-          <label class="form__label form__label--sb" for="weight">Вес (кг):<sup>*</sup>
-            <input class="form__input form__input--weight" type="number" id="weight" placeholder="7" required>
-          </label>
-          <label class="form__label form__label--sb" for="age">Возраст (лет):
-            <input class="form__input form__input--age" type="number" id="age" placeholder="7">
-          </label>
-        </fieldset>
-        <fieldset class="form__filter-radio form__legend--border">
-          <legend class="visually-hidden">Нужды питомца</legend>
-          <label class="form__label form__label--wl" for="weight-loss">
-            <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
-          </label>
-          <label class="form__label" for="weight-gain">
-            <input class="form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
-          </label>
-          <label class="form__label form__label--doubts" for="doubts">
-            <input class="form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
-          </label>
-        </fieldset>
-      </div>
-      <fieldset class="form__contacts form__legend">
-        <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
+      <div class="form__content-wrapper">
         <div class="form__group-wrapper">
-          <label class="form__label form__label--sb" for="email">E-mail:<sup>*</sup>
-            <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
-            <span class="form__icon-tel"></span>
-          </label>
-          <label class="form__label form__label--sb" for="phone">Телефон:<sup>*</sup>
-            <input class="form__input form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
-            <span class="form__icon-tel"></span>
-          </label>
+          <fieldset class="form__group form__legend">
+            <legend class="visually-hidden">Информация о питомце</legend>
+            <label for="name" class="form__label form__label--name">Имя:<sup>*</sup>
+              <input class="form__input form__input--info" type="text" id="name" placeholder="Барсик" required>
+            </label>
+            <label class="form__label form__label--sb" for="weight">Вес (кг):<sup>*</sup>
+              <input class="form__input form__input--info" type="number" id="weight" placeholder="7" required>
+            </label>
+            <label class="form__label form__label--sb" for="age">Возраст (лет):
+              <input class="form__input form__input--info" type="number" id="age" placeholder="7">
+            </label>
+          </fieldset>
+          <fieldset class="form__filter-radio form__legend--border">
+            <legend class="visually-hidden">Нужды питомца</legend>
+            <label class="form__label form__label--wl" for="weight-loss">
+              <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
+            </label>
+            <label class="form__label" for="weight-gain">
+              <input class="form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
+            </label>
+            <label class="form__label form__label--doubts" for="doubts">
+              <input class="form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
+            </label>
+          </fieldset>
         </div>
-      </fieldset>
-      <fieldset class="form__comments form__legend">
-        <legend class="form__legend form__legend-comment">Комментарий</legend>
-        <textarea class="form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
-      </fieldset>
-      <fieldset class="form__add-ons form__legend">
-        <legend class="form__legend form__legend-addons">Дополнительно</legend>
-        <label class="form__label" for="sugar-sub">
-          <input class="form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>сахарозаменитель
-        </label>
-        <label class="form__label" for="water">
-          <input class="form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">питьевая вода
-        </label>
-        <label class="form__label" for="milk">
-          <input class="form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">молоко
-        </label>
-        <label class="form__label" for="vitamins">
-          <input class="form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">витамины
-        </label>
-        <div class="button-container">
-          <button class="form__button button" type="button">отправить заявку</button>
-          <span class="form__icon-required">* — Обязательные поля</span>
-        </div>
-      </fieldset>
+        <fieldset class="form__contacts form__legend">
+          <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
+          <div class="form__group-contacts">
+            <label class="form__label form__label--email" for="email">E-mail:<sup>*</sup>
+              <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
+              <span class="form__icon-tel"></span>
+            </label>
+            <label class="form__label form__label--sb" for="phone">Телефон:<sup>*</sup>
+              <input class="form__input form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
+              <span class="form__icon-tel"></span>
+            </label>
+          </div>
+        </fieldset>
+        <fieldset class="form__comments form__legend">
+          <legend class="form__legend form__legend-comment">Комментарий</legend>
+          <textarea class="form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+        </fieldset>
+        <fieldset class="form__add-ons form__legend">
+          <legend class="form__legend form__legend-addons">Дополнительно</legend>
+          <ul class="form__addons-list">
+            <li class="form__addons-item">
+              <label class="form__label" for="sugar-sub">
+                <input class="form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>сахарозаменитель
+              </label>
+            </li>
+            <li class="form__addons-item">
+              <label class="form__label" for="water">
+              <input class="form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">питьевая вода
+            </label>
+          </li>
+            <li class="form__addons-item">
+              <label class="form__label" for="milk">
+                <input class="form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">молоко
+              </label>
+            </li>
+            <li class="form__addons-item">
+              <label class="form__label" for="vitamins">
+                <input class="form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">витамины
+              </label>
+            </li>
+          </ul>
+          <div class="button-container">
+            <button class="form__button button" type="button">отправить заявку</button>
+            <span class="form__icon-required">* — Обязательные поля</span>
+          </div>
+        </fieldset>
+    </div>
 
     </form>
   </section>
@@ -91,7 +103,7 @@
       </address>
     </div>
     <div class="contacts__location">
-      <iframe class="contacs__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sus!4v1650547930435!5m2!1sen!2sus" style="border:0;" allowfullscreen="" title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sus!4v1650547930435!5m2!1sen!2sus" style="border:0;" allowfullscreen="" title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 </main>
